--- a/a1/data-preperation-and-EDA.ipynb
+++ b/a1/data-preperation-and-EDA.ipynb
@@ -5,8 +5,7 @@
    "id": "17080b91",
    "metadata": {},
    "source": [
-    "# Assignment 1: Data Preparation and Exploration (EDA)\n",
-    "## Customer Churn Analysis"
+    "# Task 1: Data Preparation and Exploration (EDA)"
    ]
   },
   {
