feat: exported all graphs to images

--- a/a1/churn-classifiers.ipynb
+++ b/a1/churn-classifiers.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "b97c98ec",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "b9f454a1",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "d3bd0271",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "392d2536",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "985cf211",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "d110b13b",
    "metadata": {},
    "outputs": [
@@ -317,6 +317,9 @@
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "disp.plot(cmap=\"Blues\", ax=ax)\n",
     "plt.title(\"Confusion Matrix for Churn Prediction\")\n",
+    "plt.savefig(\n",
+    "    \"results/decision_tree_confusion_matrix.png\", format=\"png\", bbox_inches=\"tight\", dpi=300\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -351,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "14126fcb",
    "metadata": {},
    "outputs": [
@@ -385,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "6d9b2eb0",
    "metadata": {},
    "outputs": [
@@ -439,6 +442,9 @@
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "disp_rf.plot(cmap=\"Greens\", ax=ax)\n",
     "plt.title(\"Random Forest Confusion Matrix\")\n",
+    "plt.savefig(\n",
+    "    \"results/random_forest_confusion_matrix.png\", format=\"png\", bbox_inches=\"tight\", dpi=300\n",
+    ")\n",
     "plt.show()"
    ]
   },
@@ -453,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "d6c0d637",
    "metadata": {},
    "outputs": [
@@ -490,6 +496,9 @@
     "plt.title(\"Random Forest Feature Importance - What Drives Customer Churn?\")\n",
     "plt.xlabel(\"Relative Importance\")\n",
     "plt.ylabel(\"Feature\")\n",
+    "plt.savefig(\n",
+    "    \"results/random_forest_feature_importance.png\", format=\"png\", bbox_inches=\"tight\", dpi=300\n",
+    ")\n",
     "plt.show()"
    ]
   },
